[package]
name = "fastest-practical-cactus"
version = "0.1.0"
authors = ["Isamu Mogi <isamu@leafytree.jp>"]
build = "build.rs"

[dependencies]
bytes = "0"
hyper = "0"
futures = "0"
openh264-sys = "1"
magick_rust = "0"
chrono = "0"
libc = "0"
tokio-core = "0"
tokio-timer = "0"

[dependencies.ffmpeg-sys]
version = "3"
default-features = false
features = [ "avformat" ]
